--- a/src/web-app/ClientApp/package.json
+++ b/src/web-app/ClientApp/package.json
@@ -1,5 +1,6 @@
 {
   "name": "instaconverter",
+  "homepage": "/instaconverter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
